add funcionalidad del carrito

--- a/carrito.html
+++ b/carrito.html
@@ -6,6 +6,8 @@
     <title>Tech Warrior</title>
     <link rel="stylesheet" href="/css/carrito.css">
     <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <!-- Header -->
@@ -67,10 +69,26 @@
 
     </header>
     <!--Boton quitar-->
-    <button onclick="quitarDelCarrito()">Quitar Producto</button>
     <section class="productos-section" >
         <div class="productos-container" id="productosContainer"></div>
-        <div class="pago-container" id="pagoContainer"></div>
+        <div class="pago-section" id="pagoContainer">
+            <div class="pago-container">
+                <div class="header-carrito">
+                    <h2>Tu Carrito</h2>
+                </div>
+                <div class="pago-items-container"> 
+                </div>
+                <div class="pago-total">
+                    <div class="fila">
+                        <strong>Tu Total</strong>
+                        <span class="carrito-precio-total">
+                            $120.000,00
+                        </span>
+                    </div>
+                    <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Scripts -->
     <script src="js/carrito.js"></script>
