--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="product-details">
                     <h3>Producto 1</h3>
                     <p>Descripcion corta</p>
-                    <p class="product-price">$$$$$$</p>
+                    <p class="product-price">10000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
                     </div>
@@ -134,7 +134,7 @@
                 <div class="product-details">
                     <h3>Producto 2</h3>
                     <p>Descripcion corta</p>
-                    <p class="product-price">$$$$$$</p>
+                    <p class="product-price">20000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
                     </div>
@@ -146,7 +146,7 @@
                 <div class="product-details">
                     <h3>Producto 3</h3>
                     <p>Descripcion corta</p>
-                    <p class="product-price">$$$$$$</p>
+                    <p class="product-price">4500</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
                     </div>
@@ -158,7 +158,7 @@
                 <div class="product-details">
                     <h3>Producto 4</h3>
                     <p>Descripcion corta</p>
-                    <p class="product-price">$$$$$$</p>
+                    <p class="product-price">50000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
                     </div>
