--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="#category">Categorias</a></li>
                     <li><a href="#contact">Contacto</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="/nosotros.html">Nosotros</a></li>
                 </ul>
             </nav>
             <form action="">
