--- a/public/signup.html
+++ b/public/signup.html
@@ -20,7 +20,7 @@
             <input type="password" placeholder="..." id="password" required>
             <input type="submit" value="Registro">
         </form>
-        <p>Ya tienes una cuenta? <a href="login.html">Login</a></p>
+        <p>Ya tienes una cuenta? <a href="/login">Login</a></p>
     </section>
     <script src="js/signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
