--- a/public/carrito.html
+++ b/public/carrito.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Warrior</title>
+    <link rel="stylesheet" href="/css/carrito.css">
     <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="/index.html">
+            <a href="/">
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
             <nav class="nav-container">
                 <ul>
                     <li><a href="#category">Categorias</a></li>
                     <li><a href="#contact">Contacto</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="/nosotros">Nosotros</a></li>
                 </ul>
             </nav>
             <form action="">
@@ -38,7 +44,7 @@
                         </path>
                     </svg>
                 </a>
-                <a class="carrito-container" href="/carrito.html">
+                <a class="carrito-container" href="/carrito">
                     <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M16.546 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49a.996.996 0 0 0-.87-1.48h-14.8l-.94-2h-3.27v2h2l3.6 7.59-1.35 2.44c-.73 1.34.23 2.97 1.75 2.97h12v-2h-12l1.1-2h7.45Zm-9.39-7h12.15l-2.76 5h-7.02l-2.37-5Zm.84 12c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2Zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2Z">
@@ -65,8 +71,28 @@
         </div>
 
     </header>
-
-
+    <!--Boton quitar-->
+    <section class="productos-section" >
+        <div class="productos-container" id="productosContainer"></div>
+        <div class="pago-section" id="pagoContainer">
+            <div class="pago-container">
+                <div class="header-carrito">
+                    <h2>Tu Carrito</h2>
+                </div>
+                <div class="pago-items-container"> 
+                </div>
+                <div class="pago-total">
+                    <div class="fila">
+                        <strong>Tu Total</strong>
+                        <span class="carrito-precio-total">
+                            $120.000,00
+                        </span>
+                    </div>
+                    <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Scripts -->
     <script src="js/carrito.js"></script>
 </body>
