--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
             <input type="password" placeholder="..." id="password" required>
             <input type="submit" value="Ingresar">
         </form>
-        <p>No tienes una cuenta? <a href="signup.html">Registro</a></p>
+        <p>No tienes una cuenta? <a href="/register">Registro</a></p>
     </section>
     <script src="js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
