--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -15,14 +15,14 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="/index.html">
+            <a href="/">
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
             <nav class="nav-container">
                 <ul>
-                    <li><a href="#category">Categorias</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                    <li><a href="/nosotros.html">Nosotros</a></li>
+                    <li><a href="/productos">Categorias</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="/nosotros">Nosotros</a></li>
                 </ul>
             </nav>
             <form action="">
@@ -43,7 +43,7 @@
                         </path>
                     </svg>
                 </a>
-                <a class="carrito-container" href="/carrito.html">
+                <a class="carrito-container" href="/carrito">
                     <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M16.546 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49a.996.996 0 0 0-.87-1.48h-14.8l-.94-2h-3.27v2h2l3.6 7.59-1.35 2.44c-.73 1.34.23 2.97 1.75 2.97h12v-2h-12l1.1-2h7.45Zm-9.39-7h12.15l-2.76 5h-7.02l-2.37-5Zm.84 12c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2Zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2Z">
