--- a/public/productos.html
+++ b/public/productos.html
@@ -67,10 +67,11 @@
     </header>
     <section>
         <h1 style="color: white;">ESTO ES PRODUCTOS</h1>
+        <div id="productos"></div>
     </section>
 
 
     <!-- Scripts -->
-    <script src="/js/carrito.js"></script>
+    <script src="/js/productos.js"></script>
 </body>
 </html>
