Tarjetas de los productos arreglados

--- a/public/productos.html
+++ b/public/productos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Warrior</title>
     <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/productos.css">
 </head>
 <body>
     <!-- Header -->
@@ -66,7 +67,6 @@
 
     </header>
     <section>
-        <h1 style="color: white;">ESTO ES PRODUCTOS</h1>
         <div id="productos"></div>
     </section>
 
