--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
                 <img src="img/tarjeta1.jpeg" alt="">
                 <div class="product-details">
                     <h3>Producto 1</h3>
-                    <p>Descripcion corta</p>
+                    <p class="product-description">Descripcion corta</p>
                     <p class="product-price">10000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
@@ -133,7 +133,7 @@
                 <img src="img/tarjeta1.jpeg" alt="">
                 <div class="product-details">
                     <h3>Producto 2</h3>
-                    <p>Descripcion corta</p>
+                    <p class="product-description">Descripcion corta</p>
                     <p class="product-price">20000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
@@ -145,7 +145,7 @@
                 <img src="img/tarjeta1.jpeg" alt="">
                 <div class="product-details">
                     <h3>Producto 3</h3>
-                    <p>Descripcion corta</p>
+                    <p class="product-description">Descripcion corta</p>
                     <p class="product-price">4500</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
@@ -157,7 +157,7 @@
                 <img src="img/tarjeta1.jpeg" alt="">
                 <div class="product-details">
                     <h3>Producto 4</h3>
-                    <p>Descripcion corta</p>
+                    <p class="product-description">Descripcion corta</p>
                     <p class="product-price">50000</p>
                     <div class="product-btn">
                         <button id="boton" type="button">Añadir al Carrito</button>
