prueba de los productos con datos

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,9 @@
         <p class="product-section-description">¡Descubre nuestros artículos más populares y de mayor rendimiento!</p>
         <div class="product-container">
             <article class="product-card">
-                <img src="img/tarjeta1.jpeg" alt="">
+                <div class="product-image-container">
+                    <img src="img/productos/11.png" alt="">
+                </div>
                 <div class="product-details">
                     <h3>Producto 1</h3>
                     <p class="product-description">Descripcion corta</p>
@@ -130,7 +132,9 @@
             </article>
 
             <article class="product-card">
-                <img src="img/tarjeta1.jpeg" alt="">
+                <div class="product-image-container">
+                    <img src="img/productos/11.png" alt="">
+                </div>
                 <div class="product-details">
                     <h3>Producto 2</h3>
                     <p class="product-description">Descripcion corta</p>
@@ -142,7 +146,9 @@
             </article>
 
             <article class="product-card">
-                <img src="img/tarjeta1.jpeg" alt="">
+                <div class="product-image-container">
+                    <img src="img/productos/11.png" alt="">
+                </div>
                 <div class="product-details">
                     <h3>Producto 3</h3>
                     <p class="product-description">Descripcion corta</p>
@@ -154,7 +160,9 @@
             </article>
 
             <article class="product-card">
-                <img src="img/tarjeta1.jpeg" alt="">
+                <div class="product-image-container">
+                    <img src="img/productos/11.png" alt="">
+                </div>
                 <div class="product-details">
                     <h3>Producto 4</h3>
                     <p class="product-description">Descripcion corta</p>
