Productos, nosotros y carrito terminado

--- a/public/carrito.html
+++ b/public/carrito.html
@@ -20,30 +20,21 @@
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
             <nav class="nav-container">
-                <ul>
-                    <li><a href="#category">Categorias</a></li>
-                    <li><a href="#contact">Contacto</a></li>
+                <ul class="ul">
+                    <li class="menu-categorias"><a href="">Categorias</a>
+                        <ul class="menu-categorias-ul">
+                            <div class="menu-categorias-container">
+                                <li class="categoria-item"><a href="productos?categoria=1">pcs gamer</a></li>
+                                <li class="categoria-item"><a href="productos?categoria=2">teclados y ratones</a></li>
+                                <li class="categoria-item"><a href="productos?categoria=3">otros perifericos</a></li>
+                            </div>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contacto</a></li>
                     <li><a href="/nosotros">Nosotros</a></li>
                 </ul>
             </nav>
-            <form action="">
-                <input class="header-input" type="text" placeholder="Buscar">
-                <span>
-                    <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M15.755 14.255h-.79l-.28-.27a6.471 6.471 0 0 0 1.57-4.23 6.5 6.5 0 1 0-6.5 6.5c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99 1.49-1.49-4.99-5Zm-6 0c-2.49 0-4.5-2.01-4.5-4.5s2.01-4.5 4.5-4.5 4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5Z">
-                        </path>
-                    </svg>
-                </span>
-            </form>
             <div class="icons-container">
-                <a href="#">
-                    <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="m6.76 5.34-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41ZM1 11h3v2H1v-2Zm10-9.95h2V4h-2V1.05Zm8.04 2.495 1.408 1.407-1.79 1.79-1.407-1.408 1.789-1.789Zm-1.8 15.115 1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4ZM20 11h3v2h-3v-2Zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4Zm-1 4h2v2.95h-2V20Zm-7.45-.96 1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8Z">
-                        </path>
-                    </svg>
-                </a>
                 <a class="carrito-container" href="/carrito">
                     <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
