--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
             <nav class="nav-container">
-                <ul>
+                <ul class="ul">
                     <li><a href="#category">Categorias</a></li>
                     <li><a href="#contact">Contacto</a></li>
                     <li><a href="/nosotros">Nosotros</a></li>
