--- a/public/productos.html
+++ b/public/productos.html
@@ -15,8 +15,16 @@
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
             <nav class="nav-container">
-                <ul>
-                    <li><a>Categorias</a></li>
+                <ul class="ul">
+                    <li class="menu-categorias"><a href="">Categorias</a>
+                        <ul class="menu-categorias-ul">
+                            <div class="menu-categorias-container">
+                                <li class="categoria-item"><a href="productos?categoria=1">pcs gamer</a></li>
+                                <li class="categoria-item"><a href="productos?categoria=2">teclados y ratones</a></li>
+                                <li class="categoria-item"><a href="productos?categoria=3">otros perifericos</a></li>
+                            </div>
+                        </ul>
+                    </li>
                     <li><a href="#">Contacto</a></li>
                     <li><a href="/nosotros">Nosotros</a></li>
                 </ul>
