--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
+            <button class="hamburger-menu" onclick="toggleMenuHamburguesa()">☰</button>
             <a href="/">
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
@@ -140,10 +141,16 @@
             </form>
         </div>
         <div class="contact-data">
-            <span>Correo</span>
-            <p>TechWarrior@gmail.com</p>
-            <span>Telefono</span>
-            <p>+57 300 1847927</p>
+            <article>
+                <div>
+                    <span>Correo</span>
+                    <p>TechWarrior@gmail.com</p>
+                </div>
+                <div>
+                    <span>Telefono</span>
+                    <p>+57 300 1847927</p>
+                </div>
+            </article>
             <div class="contact-redes">
                 <a href="#">
                     <svg width="25" height="25" fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
