--- a/public/productos.html
+++ b/public/productos.html
@@ -11,6 +11,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
+            <button class="hamburger-menu" onclick="toggleMenuHamburguesa()">☰</button>
             <a href="/">
                 <img class="header-logo" src="img/TechWarrior Logo.png" alt="Tech Warrior">
             </a>
