--- a/public/productos.html
+++ b/public/productos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Warrior</title>
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="/css/productos.css">
 </head>
@@ -26,7 +27,7 @@
                             </div>
                         </ul>
                     </li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
                     <li><a href="/nosotros">Nosotros</a></li>
                 </ul>
             </nav>
@@ -65,5 +66,6 @@
 
     <!-- Scripts -->
     <script src="/js/productos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
